--- a/manifest.plist
+++ b/manifest.plist
@@ -2,7 +2,7 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://192.168.120.216/upload/uploads/Payload.ipa</string>
+<string>http://192.168.88.229/xs/Payload.ipa</string>
 </dict>
 <dict>
 <key>kind</key>
