--- a/manifest.plist
+++ b/manifest.plist
@@ -2,17 +2,17 @@
 <key>kind</key>
 <string>software-package</string>
 <key>url</key>
-<string>http://192.168.88.229/xs/Payload.ipa</string>
+<string>https://github.com/heron-newland/xs/tree/main/resources/Payload.ipa</string>
 </dict>
 <dict>
 <key>kind</key>
 <string>display-image</string>
 <key>url</key>
-<string>http://192.168.120.216/xs/Icon-58.png</string>
+<string>https://github.com/heron-newland/xs/tree/main/resources/Icon-58.png</string>
 </dict>
 <dict>
 <key>kind</key>
 <string>full-size-image</string>
 <key>url</key>
-<string>http://192.168.120.216/xs/Icon-120.png</string>
+<string>hhttps://github.com/heron-newland/xs/tree/main/resources/Icon-120.png</string>
 </dict>
